--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,13 @@ body {
     text-wrap: balance;
   }
 }
+.marker-label{
+  color: aqua;
+  padding: 10px;
+  background-color: rgb(5, 5, 5,0.5);
+  border-radius: 10px;
+  margin-top: 80px;
+  color: #ffffff !important;
+  border: 3px solid #E92221;
+  border-style: dashed;
+}
