--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,6 @@ body {
   border-radius: 10px;
   margin-top: 80px;
   color: #ffffff !important;
-  border: 3px solid #E92221;
+  border: 3px solid #3a3939;
   border-style: dashed;
 }
